# CicadaChorusDetection

./: .gitignore  README.md  diagram.R  mlflow.sh  pyproject.toml  run.sh
scripts/: chorus_generator.py  cnn.py
scripts/utils/: data.py  whombat_utils.py
step1_real_annotation/: README.md  annotation-project-e3a3c075-1f15-4d0d-bb37-58bd9e00b50b.json  annotation-project-fd5433d4-2e19-44a7-abbd-41b82b4fe4ad.json  annotation_to_csv.py  copy_sample_audio_files.py  export_annotation.R  plot_species_composition.R  sample_akitsu_1.csv  sample_akitsu_2.csv  sample_audio_files.R  sample_ryokuchi_1.csv  sample_ryokuchi_2.csv  sample_suiri_1.csv  sample_suiri_2.csv  test_dataset.csv  tune_dataset.csv
step2_prepare_training_sources/: README.md  calc_cicada_song_length.py  plot_spectrograms.py  preprocess_backgrounds.py  preprocess_segments.py  train_test_split.R  youtube_list.md
step3_model_training/: README.md  plot_model_and_input_selection.R  plot_popsize_max_effect.R  run.py  select_best_model.R  simulation_tuning_results.csv  test_model.py
step3_model_training/configs/: final_run.yaml  tune_cicada_popsize.yaml  tune_model.yaml  tune_simulation.yaml  tune_simulation_tpe.yaml
step4_application_phenology_monitoring/: Akitsu.csv  plot_calling_activities.R  predict.py
