[project]
name = "cicadachorusdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "librosa>=0.11.0",
    "mlflow>=2.21.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyroomacoustics>=0.8.3",
    "scikit-learn>=1.6.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "whombat>=0.8.3",
]
